trustfall_core/test_data/tests/parse_errors/output_name_with_multiple_invalid_chars.parse-error.ron
Err(InvalidOutputName("name with-various $%^&# chars!", [
  ' ',
  '-',
  '$',
  '%',
  '^',
  '&',
  '#',
  '!',
], Pos(
  line: 4,
  column: 28,
)))
